--- a/templates/Menu/search-fields/partials/select-option.html.twig
+++ b/templates/Menu/search-fields/partials/select-option.html.twig
@@ -1,3 +1,5 @@
 {% trans_default_domain 'HBMDatagridBundle' %}
 
-<option {% if key is not same as('') %}value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}{% else %}disabled{% endif %}>{{ value }}</option>
+{% import '@HBMDatagrid/macros.html.twig' as dg %}
+
+<option {% if key is not same as('') %}value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}{% else %}disabled{% endif %}>{{ dg.trans(value, transDomain) }}</option>
