Use german translation as default.

--- a/templates/Menu/elements/navbar-v4-toggler.html.twig
+++ b/templates/Menu/elements/navbar-v4-toggler.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'HBMDatagridBundle' %}
 
-<button class="datagrid-menu-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#{{ datagrid_id~'-navbar' }}" aria-controls="navbarNav" aria-expanded="false" aria-label="{{ 'Toggle datagrid navigation'|trans }}">
+<button class="datagrid-menu-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#{{ datagrid_id~'-navbar' }}" aria-controls="navbarNav" aria-expanded="false" aria-label="{{ 'Navigation ein-/ausblenden'|trans }}">
   <span class="navbar-toggler-icon"></span>
 </button>
