Use variable translation domain from datagrid.

--- a/templates/Datagrid/table-head-th.html.twig
+++ b/templates/Datagrid/table-head-th.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
@@ -8,11 +8,11 @@
 
 {% if cell.theadLinks|length > 0 %}
   {%- if cell.theadLinks|length > 1 and cell.labelPos == 'before' -%}
-    {{ dg.trans(cell.label, transDomain) }}
+    {{ dg.trans(cell.label, datagrid.transDomainVariable) }}
   {%- endif -%}
   {%- for sortKey, theadLink in cell.theadLinks -%}
-    <a class="{{ classesLink }}" href="{{ dg.path(theadLink) }}" title="{{ 'Sortieren nach:'|trans }} {{ dg.trans(cell.getSortKeyText(sortKey), transDomain) }}">
-      {{- dg.trans(cell.getSortKeyLabel(sortKey), transDomain) -}}
+    <a class="{{ classesLink }}" href="{{ dg.path(theadLink) }}" title="{{ 'Sortieren nach:'|trans }} {{ dg.trans(cell.getSortKeyText(sortKey), datagrid.transDomainVariable) }}">
+      {{- dg.trans(cell.getSortKeyLabel(sortKey), datagrid.transDomainVariable) -}}
       {%- if datagrid.isSorted(sortKey) -%}
         {%- if datagrid.getSortationDirection(sortKey) == 'asc' -%}
           &nbsp;<span class="{{ classesSortAsc }}"></span>
@@ -27,8 +27,8 @@
     {%- endif -%}
   {%- endfor -%}
   {%- if cell.theadLinks|length > 1 and cell.labelPos == 'after' -%}
-    {{ dg.trans(cell.label, transDomain) }}
+    {{ dg.trans(cell.label, datagrid.transDomainVariable) }}
   {%- endif -%}
 {% else %}
-  {{ dg.trans(cell.label, transDomain) }}
+  {{ dg.trans(cell.label, datagrid.transDomainVariable) }}
 {% endif %}
