--- a/templates/Menu/elements/navbar-v4-stats.html.twig
+++ b/templates/Menu/elements/navbar-v4-stats.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 <div class="datagrid-menu-header navbar-brand">
   {% if datagrid.menu.showHeader %}
