--- a/templates/Menu/search-fields/hidden.html.twig
+++ b/templates/Menu/search-fields/hidden.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% set attributes = attributes(searchField['attr']|default([])).add({
   'type': 'hidden',
