--- a/templates/Datagrid/table-body.html.twig
+++ b/templates/Datagrid/table-body.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 <tbody {{ datagrid.parseTableBodyAttr()|raw }}>
 {% for row, obj in datagrid.results %}
@@ -6,7 +6,7 @@
     {% for column, cell in datagrid.cells %}
       {% if (cell.isVisibleNormal and not datagrid.extended) or (cell.isVisibleExtended and datagrid.extended) %}
         <td {{ cell.attr('td')|raw }}>
-          {% include cell.template(obj, column, row) with cell.templateParams(obj, column, row)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj, 'transDomain': transDomain }) only %}
+          {% include cell.template(obj, column, row) with cell.templateParams(obj, column, row)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj }) only %}
         </td>
       {% endif %}
     {% endfor %}
