--- a/templates/Datagrid/table-head.html.twig
+++ b/templates/Datagrid/table-head.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
@@ -7,7 +7,7 @@
     {% for column, cell in datagrid.cells %}
       {% if (cell.isVisibleNormal and not datagrid.extended) or (cell.isVisibleExtended and datagrid.extended) %}
         <th {{ cell.attr('th')|raw }}>
-          {% include '@HBMDatagrid/Datagrid/table-head-th.html.twig' with { 'datagrid': datagrid, 'cell': cell, 'column': column, 'transDomain': transDomain } only %}
+          {% include '@HBMDatagrid/Datagrid/table-head-th.html.twig' with { 'datagrid': datagrid, 'cell': cell, 'column': column } only %}
         </th>
       {% endif %}
     {% endfor %}
