--- a/templates/Menu/elements/navbar-v4-search-form.html.twig
+++ b/templates/Menu/elements/navbar-v4-search-form.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
@@ -7,7 +7,7 @@
 
     {% for searchKey, searchField in datagrid.menu.searchFieldsSorted %}
       {% if searchField['extended'] is not defined or not searchField['extended'] or datagrid.extended %}
-        {% set transDomainSearchField = (searchField['transDomain'] is defined) ? searchField['transDomain'] : transDomain %}
+        {% set transDomainSearchField = (searchField['transDomain'] is defined) ? searchField['transDomain'] : datagrid.transDomainVariable %}
 
         {% if searchField['type'] == 'hidden' %}
           {% include '@HBMDatagrid/Menu/search-fields/hidden.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomainSearchField } only %}
