--- a/templates/Menu/elements/navbar-v4-toggler.html.twig
+++ b/templates/Menu/elements/navbar-v4-toggler.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 <button class="datagrid-menu-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#{{ datagrid_id~'-navbar' }}" aria-controls="navbarNav" aria-expanded="false" aria-label="{{ 'Navigation ein-/ausblenden'|trans }}">
   <span class="navbar-toggler-icon"></span>
