--- a/templates/Menu/search-fields/partials/options.html.twig
+++ b/templates/Menu/search-fields/partials/options.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
@@ -31,10 +31,10 @@
           {% else %}
             {% set optionAttributes = optionAttributes.set('checked', optionAttributes.get('value') in datagrid.menu.searchValue(searchKey ~ '-options')) %}
           {% endif %}
-          <label class="btn btn-input-group-addon" title="{{ dg.trans(optionData['title']|default(null), transDomain) }}">
+          <label class="btn btn-input-group-addon" title="{{ dg.trans(optionData['title']|default(null), datagrid.transDomainVariable) }}">
             <input {{ optionAttributes|raw }}>
-            {%- if optionData['icon']|default(null) -%}<i class="{{ dg.trans(optionData['icon'], transDomain) }}"></i>{%- endif -%}
-            {{- dg.trans(optionData['content']|default(null), transDomain) -}}
+            {%- if optionData['icon']|default(null) -%}<i class="{{ dg.trans(optionData['icon'], datagrid.transDomainVariable) }}"></i>{%- endif -%}
+            {{- dg.trans(optionData['content']|default(null), datagrid.transDomainVariable) -}}
           </label>
         {% endfor %}
       </div>
