--- a/templates/Menu/search-fields/select.html.twig
+++ b/templates/Menu/search-fields/select.html.twig
@@ -1,6 +1,6 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
-{% embed '@HBMDatagrid/Menu/search-fields/partials/base.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField, 'transDomain': transDomain } only %}
+{% embed '@HBMDatagrid/Menu/search-fields/partials/base.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField } only %}
   {% block form_element %}
     {% set attributes = attributes(searchField['attr']|default([])).add({
       'name': searchKey
