--- a/templates/Pagination/pagination.html.twig
+++ b/templates/Pagination/pagination.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
