--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,21 +1,19 @@
-{% trans_default_domain 'HBMDatagridBundle' %}
+{% trans_default_domain datagrid.transDomainFixed %}
 
 {% import '@HBMDatagrid/macros.html.twig' as dg %}
 
-{% set transDomain = datagrid.translationDomain %}
-
-{% include datagrid.menu.template with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
+{% include datagrid.menu.template with { 'datagrid': datagrid } only %}
 
 {% if datagrid.results|length == 0 %}
   <p>{{ 'Keine Einträge gefunden.'|trans }}</p>
 {% else %}
   <div class="datagrid-table-wrapper">
     <table {{ datagrid.parseTableAttr()|raw }}>
-      {% include '@HBMDatagrid/Datagrid/table-head.html.twig' with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
+      {% include '@HBMDatagrid/Datagrid/table-head.html.twig' with { 'datagrid': datagrid } only %}
 
-      {% include '@HBMDatagrid/Datagrid/table-body.html.twig' with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
+      {% include '@HBMDatagrid/Datagrid/table-body.html.twig' with { 'datagrid': datagrid } only %}
     </table>
   </div>
 {% endif %}
 
-{% include datagrid.pagination.template with { 'datagrid': datagrid, 'pagination': datagrid.pagination, 'transDomain': transDomain } only %}
+{% include datagrid.pagination.template with { 'datagrid': datagrid, 'pagination': datagrid.pagination } only %}
