--- a/templates/Menu/search-fields/none.html.twig
+++ b/templates/Menu/search-fields/none.html.twig
@@ -1,3 +1,3 @@
-{% trans_default_domain datagrid.transDomainFixed %}
+{% trans_default_domain dgo.tdFix %}
 
-{% include '@HBMDatagrid/Menu/search-fields/partials/base.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField } only %}
+{% include '@HBMDatagrid/Menu/search-fields/partials/base.html.twig' with { 'dgo': dgo, 'searchKey': searchKey, 'searchField': searchField } only %}
