--- a/templates/Menu/elements/navbar-v4-actions.html.twig
+++ b/templates/Menu/elements/navbar-v4-actions.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain datagrid.transDomainFixed %}
+{% trans_default_domain dgo.tdFix %}
 
 <div class="{{ classes|default('datagrid-menu-actions d-flex flex-wrap justify-content-center align-items-center ml-sm-3 mt-3 mt-sm-0') }}">
   {% block datagrid_menu_action_extended %}
